// Copyright (c) 2020 Uber Technologies, Inc.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package uber.cadence.shared.v1;

option go_package = "sharedv1";

import "uber/cadence/api/v1/common.proto";

message ParentExecutionInfo {
  string domain_id = 1;
  string domain_name = 2;
  api.v1.WorkflowExecution workflow_execution = 3;
  int64 initiated_id = 4;
}

enum WorkflowState {
  WORKFLOW_STATE_INVALID = 0;
  WORKFLOW_STATE_CREATED = 1;
  WORKFLOW_STATE_RUNNING = 2;
  WORKFLOW_STATE_COMPLETED = 3;
  WORKFLOW_STATE_ZOMBIE = 4;
  WORKFLOW_STATE_VOID = 5;
  WORKFLOW_STATE_CORRUPTED = 6;
}
